<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_orchestrator</name>
  <version>0.0.0</version>
  <description>BehaviorTree workflow orchestration for robot tasks.</description>
  <maintainer email="quchaosheng000406@163.com">sheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>robot_task_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>action_msgs</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
